--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Notebooks</title>
+  <title>Yailin</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="LIbretas hechas a mano en diferentes colores, texturas y tamaños">
@@ -14,7 +14,7 @@
 </head>
 
 <body class="mat-typography">
-  <app-root></app-root>
+  <app-root>Loading...</app-root>
 </body>
 
 </html>
